--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
@@ -101,11 +101,12 @@
                     Lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div style="margin-top: 1em;">
-                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                    Este acordeón consume información de la funcionalidad Listas de chequeó.
-                </div>
-            </div>
+
+            <app-obs-valid-listachequeo [solicitudPago]="solicitudPago"
+                                        [listaChequeoCodigo]="listaTipoObservacionSolicitudes.listaChequeoCodigo"
+                                        [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                        (estadoSemaforo)="estadoAcordeones.listaChequeo = $event">
+            </app-obs-valid-listachequeo>
         </mat-expansion-panel>
     </mat-accordion>
 
