--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -44,7 +44,7 @@
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitudCodigo.expensas; else esExpensas">
+                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitud.expensas; else esExpensas">
                         <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'aprobacionSolicitud', element.contratoId, element.solicitudPagoId ]">
                             Verificar solicitud
                         </button>
