--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -44,56 +44,39 @@
             <mat-card-content style="text-align: left;">
                 <div class="chartGen">
                     <div class="chart1">
-                        <p><strong>Nombre de entidad contratista:</strong> {{ contrato.contratacion.contratista.nombre
-                            }} </p>
-                        <p><strong>Fecha de inicio del contrato:</strong> {{ contrato.contratoPoliza[0]?.fechaAprobacion
-                            | date: 'dd/MM/yyyy' }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 1 - Preconstruccion:
-                                Meses:</strong> {{ contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase1PreDias }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion:
-                                Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase2ConstruccionDias }} </p>
+                        <p><strong>Nombre de entidad contratista:</strong> {{ contrato.contratacion.contratista.nombre }} </p>
+                        <p><strong>Fecha de inicio del contrato:</strong> {{ contrato.contratoPoliza[0]?.fechaAprobacion | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 1 - Preconstruccion: Meses:</strong> {{ contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                     <div class="chart2">
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{
-                            contrato.plazoFase2ConstruccionMeses + contrato.plazoFase1PreMeses }} <strong>Días:</strong>
-                            {{ contrato.plazoFase1PreDias + contrato.plazoFase2ConstruccionDias }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{
-                            contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase2ConstruccionDias }} </p>
-                        <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date:
-                            'dd/MM/yyyy' }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 2 - Construccion:
-                                Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ ( contrato.plazoFase2ConstruccionMeses !== undefined ? contrato.plazoFase2ConstruccionMeses : 0 ) + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + ( contrato.plazoFase2ConstruccionDias !== undefined ? contrato.plazoFase2ConstruccionDias : 0 ) }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                        <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined && contrato.plazoFase2ConstruccionMeses !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                 </div>
                 <h2 class="card-subTitle">DRP</h2>
-                <div class="table-responsive">
-                    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-                        <ng-container matColumnDef="drp">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                            <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b>
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="numDrp">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="valor">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="saldo">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de
-                                registro presupuestal de alli viene el saldo inicial </td>
-                        </ng-container>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
-                </div>
+                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                    <ng-container matColumnDef="drp">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
+                        <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
+                    </ng-container>
+                    <ng-container matColumnDef="numDrp">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="valor">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="saldo">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
                 <div class="tabs--actions" style="margin-top: 1em;">
                     <button mat-raised-button color="accent" class="tabs--btn auxBtn"
                         (click)="openProyectosAsociados()">
@@ -119,10 +102,12 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-obs-cargar-forma-pago [solicitudPago]="contrato.solicitudPagoOnly"
-                    [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
-                    [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
-                    (estadoSemaforo)="getSemaforoAcordeon( 'formaPago', $event )">
+                <app-obs-cargar-forma-pago  [solicitudPago]="contrato.solicitudPagoOnly"
+                                            [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                            [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
+                                            [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                            [tieneFormaPago]="tieneFormaPago"
+                                            (estadoSemaforo)="getSemaforoAcordeon( 'formaPago', $event )">
                 </app-obs-cargar-forma-pago>
             </mat-expansion-panel>
             <mat-expansion-panel class="expansion-style">
@@ -132,10 +117,10 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-obs-registrar-solicitud-pago [contrato]="contrato"
-                    [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
-                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
-                    (estadoSemaforoRegistroSolicitud)="estadoAcordeones.estadoSolicitudPago = $event">
+                <app-obs-registrar-solicitud-pago   [contrato]="contrato"
+                                                    [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
+                                                    (estadoSemaforoRegistroSolicitud)="estadoAcordeones.estadoSolicitudPago = $event">
                 </app-obs-registrar-solicitud-pago>
             </mat-expansion-panel>
         </mat-accordion>
@@ -221,15 +206,16 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeones.estadoListaChequeo">
                     Verificar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div style="margin-top: 1em;">
-                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                    Este acordeón consume información de la funcionalidad Listas de chequeó.
-                </div>
-            </div>
+
+            <app-obs-valid-listachequeo [contrato]="contrato"
+                                        [listaChequeoCodigo]="listaTipoObservacionSolicitudes.listaChequeoCodigo"
+                                        [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                        (estadoSemaforo)="getSemaforoAcordeon( 'listaChequeo', $event )">
+            </app-obs-valid-listachequeo>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
