--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.html
@@ -3,7 +3,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="faseContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fase del contrato </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.faseContrato }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.faseContrato }} </b> </td>
             </ng-container>
             <ng-container matColumnDef="pagosRealizados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos Realizados </th>
@@ -11,7 +11,7 @@
             </ng-container>
             <ng-container matColumnDef="valorFacturado">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor facturado </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorFacturado }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </td>
             </ng-container>
             <ng-container matColumnDef="porcentajeFacturado">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje facturado </th>
@@ -19,7 +19,7 @@
             </ng-container>
             <ng-container matColumnDef="saldoPorPagar">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo por pagar </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPorPagar }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPorPagar | currency:'':'symbol-narrow':'.0-0' }} </td>
             </ng-container>
             <ng-container matColumnDef="porcentajePorPagar">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje por pagar </th>
@@ -135,54 +135,55 @@
     <mat-accordion *ngIf="solicitudPagoFase.esPreconstruccion === true">
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title"
-                    [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonFase">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonFase">
                     Fase 1 - Preconstrucción
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion>
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonCriterios">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonCriterios">
                             Criterios de pago incluidos en la factura
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-obs-criterio-pagos [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'criteriosPago' )">
+                    <app-obs-criterio-pagos [solicitudPago]="solicitudPago"
+                                            [esVerDetalle]="esVerDetalle"
+                                            [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                            [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
+                                            [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                            (estadoSemaforo)="getSemaforoStatus( $event, 'criteriosPago' )">
                     </app-obs-criterio-pagos>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDetalleFacturaProyecto">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDetalleFacturaProyecto">
                             Detalle factura para proyectos asociados
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-obs-detll-fact-proc-asociados [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'detalleFactura' )">
+                    <app-obs-detll-fact-proc-asociados  [solicitudPago]="solicitudPago"
+                                                        [esVerDetalle]="esVerDetalle"
+                                                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                                        [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
+                                                        [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                        (estadoSemaforo)="getSemaforoStatus( $event, 'detalleFactura' )">
                     </app-obs-detll-fact-proc-asociados>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDatosFactura">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDatosFactura">
                             Datos de la factura
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-obs-datos-factura [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'datosFactura' )">
+                    <app-obs-datos-factura  [solicitudPago]="solicitudPago"
+                                            [esVerDetalle]="esVerDetalle"
+                                            [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                            [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
+                                            (estadoSemaforo)="getSemaforoStatus( $event, 'datosFactura' )">
                     </app-obs-datos-factura>
                 </mat-expansion-panel>
             </mat-accordion>
@@ -192,70 +193,71 @@
     <mat-accordion *ngIf="solicitudPagoFase.esPreconstruccion === false">
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title"
-                    [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonFase">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonFase">
                     Fase 2 - Construcción
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion>
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonCriterios">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonCriterios">
                             Criterios de pago incluidos en la factura
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-obs-criterio-pagos [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'criteriosPago' )">
+                    <app-obs-criterio-pagos [solicitudPago]="solicitudPago"
+                                            [esVerDetalle]="esVerDetalle"
+                                            [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                            [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
+                                            [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                            (estadoSemaforo)="getSemaforoStatus( $event, 'criteriosPago' )">
                     </app-obs-criterio-pagos>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonAmortizacion">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonAmortizacion">
                             Amortización del anticipo
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-form-amortizacion [solicitudPago]="solicitudPago" [contrato]="contrato"
-                        [esVerDetalle]="esVerDetalle"
-                        [amortizacionAnticipoCodigo]="registrarSolicitudPago.amortizacionAnticipoCodigo"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'amortizacion' )">
+                    <app-form-amortizacion  [solicitudPago]="solicitudPago"
+                                            [contrato]="contrato"
+                                            [esVerDetalle]="esVerDetalle"
+                                            [amortizacionAnticipoCodigo]="registrarSolicitudPago.amortizacionAnticipoCodigo"
+                                            [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                            (estadoSemaforo)="getSemaforoStatus( $event, 'amortizacion' )">
                     </app-form-amortizacion>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDetalleFacturaProyecto">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDetalleFacturaProyecto">
                             Detalle factura para proyectos asociados
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-obs-detll-fact-proc-asociados [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'detalleFactura' )">
+                    <app-obs-detll-fact-proc-asociados  [solicitudPago]="solicitudPago"
+                                                        [esVerDetalle]="esVerDetalle"
+                                                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                                        [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
+                                                        [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                        (estadoSemaforo)="getSemaforoStatus( $event, 'detalleFactura' )">
                     </app-obs-detll-fact-proc-asociados>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title"
-                            [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDatosFactura">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDatosFactura">
                             Datos de la factura
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
-                    <app-obs-datos-factura [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                        [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                        [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
-                        (estadoSemaforo)="getSemaforoStatus( $event, 'datosFactura' )">
+                    <app-obs-datos-factura  [solicitudPago]="solicitudPago"
+                                            [esVerDetalle]="esVerDetalle"
+                                            [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                            [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
+                                            (estadoSemaforo)="getSemaforoStatus( $event, 'datosFactura' )">
                     </app-obs-datos-factura>
                 </mat-expansion-panel>
             </mat-accordion>
@@ -265,16 +267,16 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title"
-                    [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonDescuentosTecnica">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonDescuentosTecnica">
                     Descuentos Dirección Técnica
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-obs-descuentos-dir-tecnica [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle"
-                [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                [datosFacturaDescuentoCodigo]="registrarSolicitudPago.datosFacturaDescuentoCodigo"
-                (estadoSemaforo)="getSemaforoStatus( $event, 'descuentosTecnica' )">
+            <app-obs-descuentos-dir-tecnica [solicitudPago]="solicitudPago"
+                                            [esVerDetalle]="esVerDetalle"
+                                            [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
+                                            [datosFacturaDescuentoCodigo]="registrarSolicitudPago.datosFacturaDescuentoCodigo"
+                                            (estadoSemaforo)="getSemaforoStatus( $event, 'descuentosTecnica' )">
             </app-obs-descuentos-dir-tecnica>
         </mat-expansion-panel>
     </mat-accordion>
