--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
@@ -60,11 +60,11 @@
                         </ng-container>
                         <ng-container matColumnDef="valor">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <ng-container matColumnDef="saldo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de registro presupuestal de alli viene el saldo inicial </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -90,6 +90,8 @@
                 <app-obs-cargar-forma-pago  [solicitudPago]="contrato.solicitudPagoOnly"
                                             [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
                                             [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
+                                            [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                            [tieneFormaPago]="tieneFormaPago"
                                             [esVerDetalle]="esVerDetalle">
                 </app-obs-cargar-forma-pago>
             </mat-expansion-panel>
@@ -144,15 +146,16 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title">
                     Verificar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div style="margin-top: 1em;">
-                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                    Este acordeón consume información de la funcionalidad Listas de chequeó.
-                </div>
-            </div>
+
+            <app-obs-valid-listachequeo [contrato]="contrato"
+                                        [listaChequeoCodigo]="listaTipoObservacionSolicitudes.listaChequeoCodigo"
+                                        [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                        [esVerDetalle]="esVerDetalle">
+            </app-obs-valid-listachequeo>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
