--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -43,29 +43,16 @@
             <mat-card-content style="text-align: left;">
                 <div class="chartGen">
                     <div class="chart1">
-                        <p><strong>Nombre de entidad contratista:</strong> {{ contrato.contratacion.contratista.nombre
-                            }} </p>
-                        <p><strong>Fecha de inicio del contrato:</strong> {{ contrato.contratoPoliza[0]?.fechaAprobacion
-                            | date: 'dd/MM/yyyy' }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 1 - Preconstruccion:
-                                Meses:</strong> {{ contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase1PreDias }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion:
-                                Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase2ConstruccionDias }} </p>
+                        <p><strong>Nombre de entidad contratista:</strong> {{ contrato.contratacion.contratista.nombre }} </p>
+                        <p><strong>Fecha de inicio del contrato:</strong> {{ contrato.contratoPoliza[0]?.fechaAprobacion | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 1 - Preconstruccion: Meses:</strong> {{ contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                     <div class="chart2">
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{
-                            contrato.plazoFase2ConstruccionMeses + contrato.plazoFase1PreMeses }} <strong>Días:</strong>
-                            {{ contrato.plazoFase1PreDias + contrato.plazoFase2ConstruccionDias }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{
-                            contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase2ConstruccionDias }} </p>
-                        <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date:
-                            'dd/MM/yyyy' }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 2 - Construccion:
-                                Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{
-                            contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ ( contrato.plazoFase2ConstruccionMeses !== undefined ? contrato.plazoFase2ConstruccionMeses : 0 ) + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + ( contrato.plazoFase2ConstruccionDias !== undefined ? contrato.plazoFase2ConstruccionDias : 0 ) }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                        <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined && contrato.plazoFase2ConstruccionMeses !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                 </div>
                 <h2 class="card-subTitle">DRP</h2>
@@ -73,8 +60,7 @@
                     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                         <ng-container matColumnDef="drp">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                            <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b>
-                            </td>
+                            <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
                         </ng-container>
                         <ng-container matColumnDef="numDrp">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
@@ -82,12 +68,11 @@
                         </ng-container>
                         <ng-container matColumnDef="valor">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <ng-container matColumnDef="saldo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de
-                                registro presupuestal de alli viene el saldo inicial </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -118,10 +103,12 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-obs-cargar-formpago-autoriz [solicitudPago]="contrato.solicitudPagoOnly"
-                    [autorizarSolicitudPagoId]="menusIdPath.autorizarSolicitudPagoId"
-                    [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
-                    (estadoSemaforo)="getSemaforoAcordeon( 'formaPago', $event )">
+                <app-obs-cargar-formpago-autoriz    [solicitudPago]="contrato.solicitudPagoOnly"
+                                                    [autorizarSolicitudPagoId]="menusIdPath.autorizarSolicitudPagoId"
+                                                    [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
+                                                    [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                    [tieneFormaPago]="tieneFormaPago"
+                                                    (estadoSemaforo)="getSemaforoAcordeon( 'formaPago', $event )">
                 </app-obs-cargar-formpago-autoriz>
             </mat-expansion-panel>
             <mat-expansion-panel class="expansion-style">
@@ -132,9 +119,9 @@
                 </mat-expansion-panel-header>
 
                 <app-obs-registrar-sol-pago-autoriz [contrato]="contrato"
-                    [autorizarSolicitudPagoId]="menusIdPath.autorizarSolicitudPagoId"
-                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
-                    (estadoSemaforoRegistroSolicitud)="estadoAcordeones.estadoSolicitudPago = $event">
+                                                    [autorizarSolicitudPagoId]="menusIdPath.autorizarSolicitudPagoId"
+                                                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
+                                                    (estadoSemaforoRegistroSolicitud)="estadoAcordeones.estadoSolicitudPago = $event">
                 </app-obs-registrar-sol-pago-autoriz>
             </mat-expansion-panel>
         </mat-accordion>
@@ -230,15 +217,16 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeones.estadoListaChequeo">
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div style="margin-top: 1em;">
-                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                    Este acordeón consume información de la funcionalidad Listas de chequeó.
-                </div>
-            </div>
+
+            <app-obs-valid-listachequeo [contrato]="contrato"
+                                        [listaChequeoCodigo]="listaTipoObservacionSolicitudes.listaChequeoCodigo"
+                                        [autorizarSolicitudPagoId]="menusIdPath.autorizarSolicitudPagoId"
+                                        (estadoSemaforo)="getSemaforoAcordeon( 'listaChequeo', $event )">
+            </app-obs-valid-listachequeo>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
