--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-criterio-pagos-autoriz/obs-criterio-pagos-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-criterio-pagos-autoriz/obs-criterio-pagos-autoriz.component.html
@@ -1,19 +1,16 @@
-<section *ngIf="solicitudPago !== undefined">
+<section *ngIf="solicitudPago !== undefined  && montoMaximoPendiente !== undefined">
     <p class="info-sub-title supportBlack">
-        <span><b>Monto máximo por pagar en esta factura:</b> $15.000.000</span>
-        <span><b>Monto pendiente por pagar en la fase:</b> $30.000.000</span>
+        <span><b>Monto máximo por pagar en esta factura:</b> {{ montoMaximoPendiente.montoMaximo | currency:'':'symbol-narrow':'.0-0' }} </span>
+        <span><b>Monto pendiente por pagar en la fase</b> {{ montoMaximoPendiente.valorPendientePorPagar | currency:'':'symbol-narrow':'.0-0' }} </span>
     </p>
     <div class="d-flex justify-content-center" *ngIf="criteriosArraySeleccionados.length > 0">
         <strong>Criterios de pago:</strong>
-        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{
-            filterCriterios( criterio.codigo ) }}<span
-                *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span
-                *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
     </div>
     <section *ngIf="criterios.length > 0">
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
             <div formArrayName="criterios">
-                <div *ngFor="let criterio of criterios.controls" [formGroup]="criterio">
+                <div *ngFor="let criterio of criterios.controls; index as j" [formGroup]="criterio">
                     <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
                         <mat-card-header class="header-card header-card--margin">
                             <mat-card-title class="header-card--text textoGris">
@@ -21,12 +18,12 @@
                             </mat-card-title>
                         </mat-card-header>
                         <mat-card-content style="text-align: left;">
-                            <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                            <!--
-                                    <p><strong>Concepto de pago para el criterio:</strong> {{ criterio.get( 'conceptoPago' ).value.nombre }} </p>
-                                -->
-                            <p><strong>Valor facturado al concepto:</strong> $ {{ criterio.get( 'valorFacturado' ).value
-                                | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                            <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
+                            <div style="margin-top: 2em;" *ngFor="let concepto of getConceptos( j ).controls">
+                                <p style="font-size: 1.8em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                                <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                            </div>
+                            <p style="margin-top: 2em;"><strong style="font-size: 1.8em;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                         </mat-card-content>
                     </mat-card>
                 </div>
